correct cd keystore path

--- a/.github/workflows/cd_firebase.yml
+++ b/.github/workflows/cd_firebase.yml
@@ -24,7 +24,7 @@ jobs:
       # Decode keystore
       - name: Decode keystore
         run: |
-          echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > android/upload-keystore.jks
+          echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > android/app/upload-keystore.jks
 
       # Build APK
       - name: Build release APK
