--- a/.github/workflows/cd_firebase.yml
+++ b/.github/workflows/cd_firebase.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Build APK
       - name: Build release APK
-        run: flutter build apk --release
+        run: flutter build apk --release --build-number=${{ github.run_number }}
         env:
           STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
