--- a/.github/workflows/cd_firebase.yml
+++ b/.github/workflows/cd_firebase.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-and-distribute:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout source
